LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_image_handle_release(const struct heif_image_handle *)
     * }
     */
    public static FunctionDescriptor heif_image_handle_release$descriptor() {
        return heif_image_handle_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_image_handle_release(const struct heif_image_handle *)
     * }
     */
    public static MethodHandle heif_image_handle_release$handle() {
        return heif_image_handle_release.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_image_handle_release(const struct heif_image_handle *)
     * }
     */
    public static void heif_image_handle_release(MemorySegment x0) {
        var mh$ = heif_image_handle_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_release", x0);
            }
            mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_is_primary_image {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_is_primary_image"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_is_primary_image(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_is_primary_image$descriptor() {
        return heif_image_handle_is_primary_image.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_is_primary_image(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_is_primary_image$handle() {
        return heif_image_handle_is_primary_image.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_is_primary_image(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_is_primary_image(MemorySegment handle) {
        var mh$ = heif_image_handle_is_primary_image.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_is_primary_image", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_width {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_width"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_width(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_width$descriptor() {
        return heif_image_handle_get_width.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_width(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_width$handle() {
        return heif_image_handle_get_width.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_width(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_get_width(MemorySegment handle) {
        var mh$ = heif_image_handle_get_width.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_width", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_height {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_height"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_height(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_height$descriptor() {
        return heif_image_handle_get_height.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_height(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_height$handle() {
        return heif_image_handle_get_height.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_height(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_get_height(MemorySegment handle) {
        var mh$ = heif_image_handle_get_height.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_height", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_has_alpha_channel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_has_alpha_channel"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_has_alpha_channel(const struct heif_image_handle *)
     * }
     */
    public static FunctionDescriptor heif_image_handle_has_alpha_channel$descriptor() {
        return heif_image_handle_has_alpha_channel.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_has_alpha_channel(const struct heif_image_handle *)
     * }
     */
    public static MethodHandle heif_image_handle_has_alpha_channel$handle() {
        return heif_image_handle_has_alpha_channel.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_has_alpha_channel(const struct heif_image_handle *)
     * }
     */
    public static int heif_image_handle_has_alpha_channel(MemorySegment x0) {
        var mh$ = heif_image_handle_has_alpha_channel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_has_alpha_channel", x0);
            }
            return (int)mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_is_premultiplied_alpha {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_is_premultiplied_alpha"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_is_premultiplied_alpha(const struct heif_image_handle *)
     * }
     */
    public static FunctionDescriptor heif_image_handle_is_premultiplied_alpha$descriptor() {
        return heif_image_handle_is_premultiplied_alpha.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_is_premultiplied_alpha(const struct heif_image_handle *)
     * }
     */
    public static MethodHandle heif_image_handle_is_premultiplied_alpha$handle() {
        return heif_image_handle_is_premultiplied_alpha.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_is_premultiplied_alpha(const struct heif_image_handle *)
     * }
     */
    public static int heif_image_handle_is_premultiplied_alpha(MemorySegment x0) {
        var mh$ = heif_image_handle_is_premultiplied_alpha.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_is_premultiplied_alpha", x0);
            }
            return (int)mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_luma_bits_per_pixel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_luma_bits_per_pixel"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_luma_bits_per_pixel(const struct heif_image_handle *)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_luma_bits_per_pixel$descriptor() {
        return heif_image_handle_get_luma_bits_per_pixel.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_luma_bits_per_pixel(const struct heif_image_handle *)
     * }
     */
    public static MethodHandle heif_image_handle_get_luma_bits_per_pixel$handle() {
        return heif_image_handle_get_luma_bits_per_pixel.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_luma_bits_per_pixel(const struct heif_image_handle *)
     * }
     */
    public static int heif_image_handle_get_luma_bits_per_pixel(MemorySegment x0) {
        var mh$ = heif_image_handle_get_luma_bits_per_pixel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_luma_bits_per_pixel", x0);
            }
            return (int)mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_chroma_bits_per_pixel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_chroma_bits_per_pixel"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_chroma_bits_per_pixel(const struct heif_image_handle *)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_chroma_bits_per_pixel$descriptor() {
        return heif_image_handle_get_chroma_bits_per_pixel.DESC;
    }
